<resources>
    <string name="app_name">Grocery Go</string>
    <string name="login_title">Login in for more Content!</string>
    <string name="login_sub_title">By using Grocery Go app you agree to our privacy policy</string>
    <string name="enter_account">please enter your account</string>
    <string name="account">Account:</string>
    <string name="password">Password:</string>
    <string name="enter_password">please enter your password</string>
    <string name="go_to_register">Open an Account </string>
    <string name="login">Sign In</string>
    <string name="welcome_register">Welcome to Sign Up</string>
    <string name="register">Sign Up</string>
    <string name="confirm_password">please confirm your password</string>
    <string name="confirm_password_title">Confirm:</string>
    <string name="my_pub">我的发帖</string>
    <string name="introduce_yourself">介绍一下自己吧</string>
    <string name="my_ans">我的发言</string>
    <string name="my_res">收到回复</string>
    <string name="recent_view">最近浏览</string>
    <string name="comment_hint">这些评论亮了</string>
    <string name="digg_desc">\"点赞 \"</string>
    <string name="dismiss">取消</string>
    <string name="pub">发布</string>
    <string name="enter_title">请输入您的标题</string>
    <string name="pub_hint">温馨提示, 发帖需遵守以下规则</string>
    <string name="enter_your_content">输入你的内容～</string>
    <string name="query_hint">请输入相关帖子信息</string>
    <string name="digg_content">点赞</string>
    <string name="comment">查看评论</string>
    <string name="item_hint">· · · ·</string>
    <string name="content_feedback">对该内容的反馈:</string>
    <string name="not_interested">不感兴趣:</string>
    <string name="hide_author">不看该作者</string>
    <string name="reduce_rec">减少相似内容推荐</string>
    <string name="pub_feedback">内容反馈:</string>
    <string name="same_content">内容重复</string>
    <string name="call">举报</string>
    <string name="bad_content">内容质量差</string>
    <string name="reply">回复</string>
    <string name="all_reply">全部回复</string>
    <string name="my_msg">我的消息</string>
    <string name="chatroom">chatroom</string>
    <string name="delete">delete</string>
    <string name="comment_underline"><u>comments</u></string>
    <string name="share">share</string>
    <string name="request">request</string>
    <string name="i_want_to_post">I want to Post:</string>
    <string name="remarks">Remarks</string>
    <string name="please_enter_your_remarks">please enter your Remarks</string>
    <string name="post">Post</string>
    <string name="destination">Destination:</string>
    <string name="edit_destination">enter your destination</string>
    <string name="from">Time Starts:</string>
    <string name="to">Time Ends:</string>
    <string name="user_name">Ultra Bracelet</string>
    <string name="leave_tips">Finish Rating</string>
    <string name="add_a_note">Add a Note</string>
    <string name="confirm">Confirm</string>
    <string name="time_toast">Time input invalid!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="you_can_leave_your_tips">You can Leave Your Tips</string>
    <string name="my_history_rides">My History Rides</string>
    <string name="driver_wants_your_rate">Give a Rate to Driver!</string>


    <string-array name="contact_name">
        <item>James</item>
        <item>Robert</item>
        <item>John</item>
        <item>Michael</item>
        <item>Christopher</item>
        <item>Andrew</item>
        <item>Kimberly</item>
        <item>Michelle</item>
        <item>Stephanie</item>
        <item>Sharon</item>
    </string-array>
</resources>