<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_dismiss"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/btn_dismiss"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/login_title"
        android:textColor="@color/pure_black"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/login_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_sub_title"
        android:textColor="@color/sub_black"
        android:textSize="13dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf ="@id/login_title"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/account"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="8dp"
        android:text="@string/account"
        android:textColor="@color/pure_black"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf ="@id/login_sub_title"
        android:layout_marginLeft="20dp" />

    <EditText
        android:id="@+id/edit_account"
        android:layout_width="230dp"
        android:layout_height="48dp"
        app:layout_constraintLeft_toRightOf="@id/account"
        app:layout_constraintTop_toBottomOf ="@id/login_sub_title"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="18dp"
        android:textColor="@color/pure_black"
        android:textSize="15dp"
        android:background="@drawable/enter_background"
        android:hint="@string/enter_account"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/password"
        android:textColor="@color/pure_black"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf ="@id/account"
        android:layout_marginLeft="20dp" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="230dp"
        android:layout_height="48dp"
        app:layout_constraintLeft_toRightOf="@id/password"
        app:layout_constraintTop_toBottomOf ="@id/edit_account"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:textColor="@color/pure_black"
        android:textSize="15dp"
        android:background="@drawable/enter_background"
        android:hint="@string/enter_password"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="14dp"
        android:text="@string/go_to_register"
        android:textColor="@color/text_link"
        android:alpha="0.7"
        android:gravity="center"
        android:textSize="12dp"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf ="@id/edit_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/login_btn"
        android:layout_width="329dp"
        android:layout_height="44dp"
        app:layout_constraintTop_toBottomOf ="@id/register"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:background="@color/not_confirm_btn"
        android:textColor="@color/white"
        android:text="@string/login"
        android:gravity="center"
        android:textSize="18dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>